2013-04-10  Andy Buckley  <andy.buckley@cern.ch>

	* Adding LHAPDF_MAJOR_VERSION macro and examples/compatibility.cc

	* AUTHORS list tweak since James added substantial code for Fortran compatibility.

	* Adding copyright etc. notices to each file header.

	* Adding LHAPDF.h convenience header.

2013-04-09  Andy Buckley  <andy.buckley@cern.ch>

	* Fix ctypes handling in creategrids

	* Adding ignoring (and writing) of a 3rd grid block line, to
	specify "internal flavor" ID codes. Not actually parsed or
	used... yet.

	* Cleaning up LHAGlue compilation warnings

	* Config flag updates and clarifications, and adding API
	mechanisms for numMembers and LHAPDF ID lookup.

2013-04-08  Andy Buckley  <andy.buckley@cern.ch>

	* Further improved creategrid, comparison, and plotting
	scripts. Better high-xipol knots -> much better agreement. Nearly
	done.

2013-04-08  James Ferrando  <james.ferrando@cern.ch>

	* Fortran PDFLIB function mapping works now: good agreement with
	LHA5 via PYTHIA6.

2013-04-05  Andy Buckley  <andy.buckley@cern.ch>

	* migration/plotv5v6 improvements with line styles and labels.

	* Improved/fixed migration/creategrid which excludes grid points
	at x=0 (which screwed up handing over to extrapolation) and fixes
	numpy array manipulation. Low-x behaviour is now good, high-x
	needs some inspection: getting close to acceptable at last!

	* Fixes to dumpv5v6.cc flavour ID and output filenames.

2013-04-04  Andy Buckley  <andy.buckley@cern.ch>

	* Re-enabling the -Wno-long-long flag if possible, to avoid build
	warnings stemming from yaml-cpp.

2013-04-03  Andy Buckley  <andy.buckley@cern.ch>

	* migration/: Many updates to comparison scripts, and adding a
	plotv5v6 script and new README instructions.

	* migration/: Combined dumpv5.cc and dumpv6.cc into a single
	dumpv5v6.cc, with the version selected by a preprocessor macro.

2013-04-02  Andy Buckley  <andy.buckley@cern.ch>

	* Build system fixes... *finally* working on lxplus! :-)
