@@ -1,8 +1,9 @@
-bin_PROGRAMS = analyticpdf compatibility
+bin_PROGRAMS = testpdf analyticpdf compatibility
 
 AM_CPPFLAGS += $(BOOST_CPPFLAGS) $(YAMLCPP_CPPFLAGS)
 AM_LDFLAGS = -L$(top_srcdir)/src -L$(prefix)/lib $(BOOST_LDFLAGS) $(YAMLCPP_LDFLAGS)
 LIBS = -lLHAPDF $(BOOST_LIBS) $(YAMLCPP_LIBS)
 
+testpdf_SOURCES = testpdf.cc
 analyticpdf_SOURCES = analytic.cc
 compatibility_SOURCES = compatibility.cc
